infra/wger/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wger
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "wger.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: wger
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
